[gd_scene load_steps=2 format=3 uid="uid://dty3gppkdlpm8"]

[ext_resource type="Script" uid="uid://b11558bxppcc4" path="res://Systems/UserInterface/Inventory/shop_ui.gd" id="1_u8bkq"]

[node name="ShopUi" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_u8bkq")

[node name="ShopPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 400.0
offset_bottom = 520.0

[node name="ShopGrid" type="GridContainer" parent="ShopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 4

[node name="ShopNameLabel" type="Label" parent="."]
layout_mode = 0
offset_top = -30.0
offset_right = 400.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 22
text = "Shop Name"
horizontal_alignment = 1

[node name="ShopGoldLabel" type="Label" parent="."]
layout_mode = 0
offset_top = -25.0
offset_right = 54.0
offset_bottom = -2.0
theme_override_colors/font_color = Color(1, 0.85490197, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = "Gold: 0"
